Removing Individual Info, Making Team Based
Currently Broken though!

--- a/templates/Step-1.html
+++ b/templates/Step-1.html
@@ -14,21 +14,23 @@
 			  					border:2px solid #724101;">
 						<img src="http://siteops.angieslist.com/potato/images/emailHeader.png" />
 						<div style="padding: 8px;">
-							<h1>Release: %RELEASENAME%</h1>
-							<p>Passed to: %PERSONHOLDING% of %TEAMHOLDING%<br/>
-							Current Step: <b>Merging/Creating Package</b><br/>
-							</p>
-							<p><i><b>What needs to be done before passing:</b></i><br/>
-							<ol>
-								<li>Test1</li>
-								<li>Test2</li>
-							</ol>
-							<br/>
-							<b><i>When finished, pass to QA</i></b><br/><br/>
-							Notes from Passer: %NOTES%
-							</p>
-							<br/>
-							<br/>
+							<steps>
+								<h1>Release: %RELEASENAME%</h1>
+								<p>Passed to: %PERSONHOLDING% of %TEAMHOLDING%<br/>
+								Current Step: <b>Merging/Creating Package</b><br/>
+								</p>
+								<p><i><b>What needs to be done before passing:</b></i><br/>
+								<ol>
+									<li>Test1</li>
+									<li>Test2</li>
+								</ol>
+								<br/>
+								<b><i>When finished, pass to QA</i></b><br/><br/>
+								Notes from Passer: %NOTES%
+								</p>
+							</steps>
+								<br/>
+								<br/>
 						</div>
 					</div>
 					</font>
