--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,17 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 html, body {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;	
+    height: 100%;
+    min-height: 100%;
 }
+
 header {
 	background-color: #8a650e;
 	height: 40px;
@@ -20,8 +27,26 @@ header h2 {
 }
 #wrapper {
 	width: 100%;
+	min-height: 100%;
 	height: 100%;
 	padding: 0;
+}
+#content {
+	background-image:url('../images/bg.png'); overflow: hidden; min-height: 100%;
+}
+.padder {
+	 padding: 20px;
+}
+#navigation {
+	position: absolute; width: 240px; 
+	border-right:1px solid #cccccc; 
+	height: 100%; 
+	float: left; 
+	background-color: #fff;
+	line-height: 240%;
+}
+#page .padder {
+	 margin-left: 241px;
 }
 #PotatoHeader {
 	padding-top: 20px;
@@ -63,25 +88,7 @@ h6 {
 #Team h6 {
 	line-height: 15px;
 }
-#navigation {
-	width: 240px;
-	height: 100%;
-	border-right:1px solid #cccccc;
-	float: left;
-	line-height: 180%;
-	background-color: #fff;
-}
-.padding {
-	padding: 20px;
-}
-#page {
-	background-image:url('bg.png');
-	width: 100%;
-	height: 100%;
-}
-#page .padding {
-	padding-left: 270px;
-}
+
 .meter { 
 	height: 20px;  /* Can be anything */
 	position: relative;
