--- a/css/style.css
+++ b/css/style.css
@@ -1,302 +1,266 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
+
 html, body {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     -webkit-font-smoothing: antialiased;
-    text-rendering: optimizeLegibility;	
+    text-rendering: optimizeLegibility;
     height: 100%;
     min-height: 100%;
 }
 
 header {
-	background-color: #8a650e;
-	height: 40px;
-	width: 100%;
-	color: #fff;
-	border-bottom:1px solid #cccccc;
+    background-color: #8a650e;
+    height: 40px;
+    width: 100%;
+    color: #fff;
+    border-bottom: 1px solid #cccccc;
 }
+
 header img {
-	float: left;
+    float: left;
+}
+
+ol {
+    list-style: decimal inside none;
+    padding-left: 40px;
 }
 header h2 {
-	padding-top: 7px;
+    padding-top: 7px;
 }
+
 #wrapper {
-	width: 100%;
-	min-height: 100%;
-	height: 100%;
-	padding: 0;
+    width: 100%;
+    min-height: 100%;
+    height: 100%;
+    padding: 0;
 }
+
 #content {
-	background-image:url('../images/bg.png'); overflow: hidden; min-height: 100%;
+    background-image: url('../images/bg.png');
+    overflow: hidden;
+    min-height: 100%;
 }
+
 .padder {
-	 padding: 20px;
+    padding: 20px;
 }
+
 #navigation {
-	position: absolute; width: 240px; 
-	border-right:1px solid #cccccc; 
-	height: 100%; 
-	float: left; 
-	background-color: #fff;
-	line-height: 240%;
+    position: absolute;
+    width: 240px;
+    border-right: 1px solid #cccccc;
+    height: 100%;
+    float: left;
+    background-color: #fff;
+    line-height: 240%;
 }
+
 #page .padder {
-	 margin-left: 241px;
+    margin-left: 241px;
 }
+
 #PotatoHeader {
-	padding-top: 20px;
-	padding-bottom: 20px;
-	width: 100%;
-	height: 50px;
-	background-color: #f5f5f5;
-	border-bottom:1px solid #cccccc;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 100%;
+    height: 50px;
+    background-color: #f5f5f5;
+    border-bottom: 1px solid #cccccc;
 }
+
 #PotatoHeader img {
-	float: left;
-	padding-right: 10px;
-	padding-left: 40px;
+    float: left;
+    padding-right: 10px;
+    padding-left: 40px;
 }
+
 #Team {
-	float: right;
-	padding-right: 10px;
+    float: right;
+    padding-right: 10px;
 }
 
 #Version {
-	float: left;
-	height: 50px;
-	width: 400px;
+    float: left;
+    height: 50px;
+    width: 400px;
 }
+
 h1 {
-	font-size: 20px;
-	-webkit-font-smoothing: antialiased;
-	font-weight:100;
-	padding: 3px;
-	margin: 0;
+    font-size: 20px;
+    -webkit-font-smoothing: antialiased;
+    font-weight: 100;
+    padding: 3px;
+    margin: 0;
 }
+
 h6 {
-	
-	padding: 0px;
-	margin: 0;
-	line-height: 13px;
-	font-weight:100;
+
+    padding: 0px;
+    margin: 0;
+    line-height: 13px;
+    font-weight: 100;
 }
+
 #Team h6 {
-	line-height: 15px;
+    line-height: 15px;
 }
 
-.meter { 
-	height: 20px;  /* Can be anything */
-	position: relative;
-	background: #555;
-	-moz-border-radius: 25px;
-	-webkit-border-radius: 25px;
-	border-radius: 25px;
-	padding: 10px;
+.meter {
+    height: 20px; /* Can be anything */
+    position: relative;
+    background: #555;
+    -moz-border-radius: 25px;
+    -webkit-border-radius: 25px;
+    border-radius: 25px;
+    padding: 10px;
 
 }
+
 .meter > .first {
-		    -webkit-border-top-left-radius: 20px;
-	 -webkit-border-bottom-left-radius: 20px;
-	        -moz-border-radius-topleft: 20px;
-	     -moz-border-radius-bottomleft: 20px;
-	            border-top-left-radius: 20px;
-	         border-bottom-left-radius: 20px;
+    -webkit-border-top-left-radius: 20px;
+    -webkit-border-bottom-left-radius: 20px;
+    -moz-border-radius-topleft: 20px;
+    -moz-border-radius-bottomleft: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
 }
+
 .meter > .last {
-		   -webkit-border-top-right-radius: 8px;
-	-webkit-border-bottom-right-radius: 8px;
-	       -moz-border-radius-topright: 8px;
-	    -moz-border-radius-bottomright: 8px;
-	           border-top-right-radius: 8px;
-	        border-bottom-right-radius: 8px;
+    -webkit-border-top-right-radius: 8px;
+    -webkit-border-bottom-right-radius: 8px;
+    -moz-border-radius-topright: 8px;
+    -moz-border-radius-bottomright: 8px;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
 }
+
 .meter > span {
-	display: block;
-	height: 100%;
-	background-color: rgb(43,194,83);
-	background-image: -webkit-gradient(
-	  linear,
-	  left bottom,
-	  left top,
-	  color-stop(0, rgb(43,194,83)),
-	  color-stop(1, rgb(84,240,84))
-	 );
-	background-image: -webkit-linear-gradient(
-	  center bottom,
-	  rgb(43,194,83) 37%,
-	  rgb(84,240,84) 69%
-	 );
-	background-image: -moz-linear-gradient(
-	  center bottom,
-	  rgb(43,194,83) 37%,
-	  rgb(84,240,84) 69%
-	 );
-	background-image: -ms-linear-gradient(
-	  center bottom,
-	  rgb(43,194,83) 37%,
-	  rgb(84,240,84) 69%
-	 );
-	background-image: -o-linear-gradient(
-	  center bottom,
-	  rgb(43,194,83) 37%,
-	  rgb(84,240,84) 69%
-	 );
+    display: block;
+    height: 100%;
+    background-color: rgb(43, 194, 83);
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, rgb(43, 194, 83)), color-stop(1, rgb(84, 240, 84)));
+    background-image: -webkit-linear-gradient(center bottom, rgb(43, 194, 83) 37%, rgb(84, 240, 84) 69%);
+    background-image: -moz-linear-gradient(center bottom, rgb(43, 194, 83) 37%, rgb(84, 240, 84) 69%);
+    background-image: -ms-linear-gradient(center bottom, rgb(43, 194, 83) 37%, rgb(84, 240, 84) 69%);
+    background-image: -o-linear-gradient(center bottom, rgb(43, 194, 83) 37%, rgb(84, 240, 84) 69%);
 
-	position: relative;
-	overflow: hidden;
+    position: relative;
+    overflow: hidden;
 }
+
 .meter > .orange {
-	background-color: #f1a165;
-	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #f1a165),color-stop(1, #f36d0a));
-	background-image: -webkit-linear-gradient(top, #f1a165, #f36d0a); 
-        background-image: -moz-linear-gradient(top, #f1a165, #f36d0a);
-        background-image: -ms-linear-gradient(top, #f1a165, #f36d0a);
-        background-image: -o-linear-gradient(top, #f1a165, #f36d0a);
+    background-color: #f1a165;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #f1a165), color-stop(1, #f36d0a));
+    background-image: -webkit-linear-gradient(top, #f1a165, #f36d0a);
+    background-image: -moz-linear-gradient(top, #f1a165, #f36d0a);
+    background-image: -ms-linear-gradient(top, #f1a165, #f36d0a);
+    background-image: -o-linear-gradient(top, #f1a165, #f36d0a);
 }
 
 .meter > .red {
-	background-color: #f0a3a3;
-	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #f0a3a3),color-stop(1, #f42323));
-	background-image: -webkit-linear-gradient(top, #f0a3a3, #f42323);
-        background-image: -moz-linear-gradient(top, #f0a3a3, #f42323);
-        background-image: -ms-linear-gradient(top, #f0a3a3, #f42323);
-        background-image: -o-linear-gradient(top, #f0a3a3, #f42323);
+    background-color: #f0a3a3;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #f0a3a3), color-stop(1, #f42323));
+    background-image: -webkit-linear-gradient(top, #f0a3a3, #f42323);
+    background-image: -moz-linear-gradient(top, #f0a3a3, #f42323);
+    background-image: -ms-linear-gradient(top, #f0a3a3, #f42323);
+    background-image: -o-linear-gradient(top, #f0a3a3, #f42323);
 }
+
 .meter > .green {
-	background-color: #2da84a;
-	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #2da84a),color-stop(1, #68e376));
-	background-image: -webkit-linear-gradient(top, #2da84a, #68e376);
-        background-image: -moz-linear-gradient(top, #2da84a, #68e376);
-        background-image: -ms-linear-gradient(top, #2da84a, #68e376);
-        background-image: -o-linear-gradient(top, #2da84a, #68e376);
+    background-color: #2da84a;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #2da84a), color-stop(1, #68e376));
+    background-image: -webkit-linear-gradient(top, #2da84a, #68e376);
+    background-image: -moz-linear-gradient(top, #2da84a, #68e376);
+    background-image: -ms-linear-gradient(top, #2da84a, #68e376);
+    background-image: -o-linear-gradient(top, #2da84a, #68e376);
 }
+
 .meter > .blue {
-	background-color: #2e52b8;
-	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #0078ff),color-stop(1, #55a2f8));
-	background-image: -webkit-linear-gradient(top, #0078ff, #55a2f8);
-        background-image: -moz-linear-gradient(top, #0078ff, #55a2f8);
-        background-image: -ms-linear-gradient(top, #0078ff, #55a2f8);
-        background-image: -o-linear-gradient(top, #0078ff, #55a2f8);
+    background-color: #2e52b8;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #0078ff), color-stop(1, #55a2f8));
+    background-image: -webkit-linear-gradient(top, #0078ff, #55a2f8);
+    background-image: -moz-linear-gradient(top, #0078ff, #55a2f8);
+    background-image: -ms-linear-gradient(top, #0078ff, #55a2f8);
+    background-image: -o-linear-gradient(top, #0078ff, #55a2f8);
 }
+
 .meter > .red {
-	background-color: #f0a3a3;
-	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #f0a3a3),color-stop(1, #f42323));
-	background-image: -webkit-linear-gradient(top, #f0a3a3, #f42323);
-        background-image: -moz-linear-gradient(top, #f0a3a3, #f42323);
-        background-image: -ms-linear-gradient(top, #f0a3a3, #f42323);
-        background-image: -o-linear-gradient(top, #f0a3a3, #f42323);
+    background-color: #f0a3a3;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #f0a3a3), color-stop(1, #f42323));
+    background-image: -webkit-linear-gradient(top, #f0a3a3, #f42323);
+    background-image: -moz-linear-gradient(top, #f0a3a3, #f42323);
+    background-image: -ms-linear-gradient(top, #f0a3a3, #f42323);
+    background-image: -o-linear-gradient(top, #f0a3a3, #f42323);
 }
+
 .meter > .black {
-	background-color: #000;
-	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(1, #000),color-stop(1, #000));
-	background-image: -webkit-linear-gradient(top, #000, #000);
-        background-image: -moz-linear-gradient(top, #000, #000);
-        background-image: -ms-linear-gradient(top, #000, #000);
-        background-image: -o-linear-gradient(top, #000, #000);
+    background-color: #000;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(1, #000), color-stop(1, #000));
+    background-image: -webkit-linear-gradient(top, #000, #000);
+    background-image: -moz-linear-gradient(top, #000, #000);
+    background-image: -ms-linear-gradient(top, #000, #000);
+    background-image: -o-linear-gradient(top, #000, #000);
 }
+
 .meter > .purple {
-	background-color: #a00071;
-	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(1, #a00071),color-stop(1, #f000ff));
-	background-image: -webkit-linear-gradient(top, #a00071, #f000ff);
-        background-image: -moz-linear-gradient(top, #a00071, #f000ff);
-        background-image: -ms-linear-gradient(top, #a00071, #f000ff);
-        background-image: -o-linear-gradient(top, #a00071, #f000ff);
+    background-color: #a00071;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(1, #a00071), color-stop(1, #f000ff));
+    background-image: -webkit-linear-gradient(top, #a00071, #f000ff);
+    background-image: -moz-linear-gradient(top, #a00071, #f000ff);
+    background-image: -ms-linear-gradient(top, #a00071, #f000ff);
+    background-image: -o-linear-gradient(top, #a00071, #f000ff);
 }
 
 .meter > .orange:after, .green:after, .blue:after, .purple:after {
-	content: "";
-	position: absolute;
-	top: 0; left: 0; bottom: 0; right: 0;
-	background-image: 
-	   -webkit-gradient(linear, 0 0, 100% 100%, 
-	      color-stop(.25, rgba(255, 255, 255, .2)), 
-	      color-stop(.25, transparent), color-stop(.5, transparent), 
-	      color-stop(.5, rgba(255, 255, 255, .2)), 
-	      color-stop(.75, rgba(255, 255, 255, .2)), 
-	      color-stop(.75, transparent), to(transparent)
-	   );
-	background-image: 
-		-webkit-linear-gradient(
-		  -45deg, 
-	      rgba(255, 255, 255, .2) 25%, 
-	      transparent 25%, 
-	      transparent 50%, 
-	      rgba(255, 255, 255, .2) 50%, 
-	      rgba(255, 255, 255, .2) 75%, 
-	      transparent 75%, 
-	      transparent
-	   );
-	background-image: 
-		-moz-linear-gradient(
-		  -45deg, 
-	      rgba(255, 255, 255, .2) 25%, 
-	      transparent 25%, 
-	      transparent 50%, 
-	      rgba(255, 255, 255, .2) 50%, 
-	      rgba(255, 255, 255, .2) 75%, 
-	      transparent 75%, 
-	      transparent
-	   );
-	background-image: 
-		-ms-linear-gradient(
-		  -45deg, 
-	      rgba(255, 255, 255, .2) 25%, 
-	      transparent 25%, 
-	      transparent 50%, 
-	      rgba(255, 255, 255, .2) 50%, 
-	      rgba(255, 255, 255, .2) 75%, 
-	      transparent 75%, 
-	      transparent
-	   );
-	background-image: 
-		-o-linear-gradient(
-		  -45deg, 
-	      rgba(255, 255, 255, .2) 25%, 
-	      transparent 25%, 
-	      transparent 50%, 
-	      rgba(255, 255, 255, .2) 50%, 
-	      rgba(255, 255, 255, .2) 75%, 
-	      transparent 75%, 
-	      transparent
-	   );
-	z-index: 1;
-	-webkit-background-size: 50px 50px;
-	-moz-background-size:    50px 50px;
-	background-size:         50px 50px;
-	-webkit-animation: move 2s linear infinite;
-	   -webkit-border-top-right-radius: 8px;
-	-webkit-border-bottom-right-radius: 8px;
-	       -moz-border-radius-topright: 8px;
-	    -moz-border-radius-bottomright: 8px;
-	           border-top-right-radius: 8px;
-	        border-bottom-right-radius: 8px;
-	    -webkit-border-top-left-radius: 20px;
-	 -webkit-border-bottom-left-radius: 20px;
-	        -moz-border-radius-topleft: 20px;
-	     -moz-border-radius-bottomleft: 20px;
-	            border-top-left-radius: 20px;
-	         border-bottom-left-radius: 20px;
-	overflow: hidden;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-image: -webkit-gradient(linear, 0 0, 100% 100%, color-stop(.25, rgba(255, 255, 255, .2)), color-stop(.25, transparent), color-stop(.5, transparent), color-stop(.5, rgba(255, 255, 255, .2)), color-stop(.75, rgba(255, 255, 255, .2)), color-stop(.75, transparent), to(transparent));
+    background-image: -webkit-linear-gradient(-45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
+    background-image: -moz-linear-gradient(-45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
+    background-image: -ms-linear-gradient(-45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
+    background-image: -o-linear-gradient(-45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
+    z-index: 1;
+    -webkit-background-size: 50px 50px;
+    -moz-background-size: 50px 50px;
+    background-size: 50px 50px;
+    -webkit-animation: move 2s linear infinite;
+    -webkit-border-top-right-radius: 8px;
+    -webkit-border-bottom-right-radius: 8px;
+    -moz-border-radius-topright: 8px;
+    -moz-border-radius-bottomright: 8px;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    -webkit-border-top-left-radius: 20px;
+    -webkit-border-bottom-left-radius: 20px;
+    -moz-border-radius-topleft: 20px;
+    -moz-border-radius-bottomleft: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    overflow: hidden;
 }
 
 .animate > span:after {
-	display: none;
+    display: none;
 }
 
 @-webkit-keyframes move {
     0% {
-       background-position: 0 0;
+        background-position: 0 0;
     }
     100% {
-       background-position: 50px 50px;
+        background-position: 50px 50px;
     }
 }
 
 .meter > .orange:after, .green:after, .purple:after, .blue:after, .animate > span > span {
-	-webkit-animation: move 5s linear infinite;
+    -webkit-animation: move 5s linear infinite;
 }
